crates/brasa_errorset/tests/snapshots/errorset__throws_contracts_and_catch_all_satisfied.snap
---
source: crates/brasa_errorset/tests/errorset.rs
expression: dump
---
error sets
  fetch -> {NetError}
  relay -> {NetError}
  parse -> {ParseError}
  handleBoth -> {}
  wildcardAll -> {}
  pure -> {}
