crates/brasa_errorset/tests/snapshots/errorset__throws_declared_hof_lambda_is_covered.snap
---
source: crates/brasa_errorset/tests/errorset.rs
expression: dump
---
error sets
  bump -> {MapError}
  bumpAll -> {MapError}
lambda error sets
  e13 -> {MapError}
