crates/brasa_errorset/tests/snapshots/errorset__top_level_uncaught_throw_is_allowed.snap
---
source: crates/brasa_errorset/tests/errorset.rs
expression: dump
---
error sets
  boot -> {BootError}
