crates/brasa_errorset/tests/snapshots/errorset__unknown_throw_opens_the_set.snap
---
source: crates/brasa_errorset/tests/errorset.rs
expression: dump
---
error sets
  readAny -> {} (open)
